--- a/slidShow.html
+++ b/slidShow.html
@@ -10,20 +10,22 @@
 </head>
   <body>
     <div class="title">
-      歴代校長・学長・総長スライドショー
+                  　　　　　　　　べトナム🇻🇳で行った教育支援ボランティアのスライドショー    　　　　　　　
+    </div>
+    <div class="title">
+      　　　　　　〜交流会・集合写真・風景〜   　　　　　　　
     </div>
     <div class="main">
-      <button type="button" onclick="left()">もどる<</button>
-<img src="https://www.waseda.jp/top/assets/uploa
-ds/2014/03/hidemaro-360x270.jpg">
-<button type="button" onclick="right()">すすむ></button>
+      <button type="button" onclick="left()">←back</button>
+<img src="file:///Users/mhwhum/Downloads/E4B94F0F-7A66-4DBF-970D-D0C4D91024D5.jpg">
+<button type="button" onclick="right()">forward→</button>
     </div>
     <div class="control">
       <button onclick="play()">
-        再生
+        start
       </button>
-      <button onclick="stop()">停止</button>
-      <button onclick="reset()">リセット</button>
+      <button onclick="stop()">stop</button>
+      <button onclick="reset()">reset</button>
     </div>
     <script src="js/slidShow.js">
 // 　　　const　mainElement = document querySelector("div main>console.log");
